// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`commentEntry snapshot tests > with delete button 1`] = `
<div>
  <li
    class="pure-g comment-entry-comment"
  >
    <div
      class="comment-entry-left"
    >
      <svg
        class="comment-entry-icon"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M448 0H64C28.7 0 0 28.7 0 64v288c0 35.3 28.7 64 64 64h96v84c0 7.1 5.8 12 12 12 2.4 0 4.9-.7 7.1-2.4L304 416h144c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64zm16 352c0 8.8-7.2 16-16 16H288l-12.8 9.6L208 428v-60H64c-8.8 0-16-7.2-16-16V64c0-8.8 7.2-16 16-16h384c8.8 0 16 7.2 16 16v288z"
        />
      </svg>
    </div>
    <div
      class=""
    >
      <div
        class="comment-entry-content-title"
      >
        <div
          class="comment-entry-author"
        >
          Author Name
        </div>
        <div
          class="comment-entry-date"
        >
          1.1.1970
        </div>
        <svg
          class="comment-entry-control"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"
          />
        </svg>
      </div>
      <p
        class="comment-entry-text"
      >
        That is a comment
      </p>
    </div>
  </li>
</div>
`;

exports[`commentEntry snapshot tests > without delete button 1`] = `
<div>
  <li
    class="pure-g comment-entry-comment"
  >
    <div
      class="comment-entry-left"
    >
      <svg
        class="comment-entry-icon"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M448 0H64C28.7 0 0 28.7 0 64v288c0 35.3 28.7 64 64 64h96v84c0 7.1 5.8 12 12 12 2.4 0 4.9-.7 7.1-2.4L304 416h144c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64zm16 352c0 8.8-7.2 16-16 16H288l-12.8 9.6L208 428v-60H64c-8.8 0-16-7.2-16-16V64c0-8.8 7.2-16 16-16h384c8.8 0 16 7.2 16 16v288z"
        />
      </svg>
    </div>
    <div
      class=""
    >
      <div
        class="comment-entry-content-title"
      >
        <div
          class="comment-entry-author"
        >
          Author Name
        </div>
        <div
          class="comment-entry-date"
        >
          1.1.1970
        </div>
      </div>
      <p
        class="comment-entry-text"
      >
        That is a comment
      </p>
    </div>
  </li>
</div>
`;
